# to-display

./: Cargo.toml  README.md
.github/workflows/: ci.yml
to-display/: Cargo.toml
to-display-derive/: Cargo.toml
to-display-derive/src/: lib.rs
to-display-derive/tests/: test_to_display_derive.rs
to-display-derive/tests/to_display/success/: simple.expanded.rs  simple.rs
to-display/src/: context.rs  display_btreemap.rs  display_config.rs  display_instant.rs  display_option.rs  display_result.rs  display_slice.rs  lib.rs  lib_readme.md  to_display.rs  to_display_impls.rs
to-display/tests/: test_display_btreemap.rs  test_display_instant.rs  test_display_option.rs  test_display_result.rs  test_display_slice.rs  test_impl_to_display.rs
