[package]
name = "to-display-derive"

edition.workspace = true
version.workspace = true

categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true


[lib]
proc-macro = true


[dependencies]
chrono = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
semver = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }


[dev-dependencies]
macrotest = "1"
trybuild = "1.0"
